--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -5,3 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo 'Hello, GitHub Actios!'
+  pwd-ls:
+    name: PWD & LS
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print working & direcotry 
+        run: pwd
+      - name: List files
+        run: ls -al
