--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -1,15 +1,20 @@
 name: first test
 on: push
 jobs:
-  echo:
+  checkout:
     runs-on: ubuntu-latest
     steps:
-      - run: echo 'Hello, GitHub Actios!'
-  pwd-ls:
-    name: PWD & LS
-    runs-on: ubuntu-latest
-    steps:
-      - name: Print working & direcotry 
-        run: pwd
-      - name: List files
-        run: ls -al
+      - run: ls -al
+    
+  # echo:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: echo 'Hello, GitHub Actios!'
+  # pwd-ls:
+  #   name: PWD & LS
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Print working & direcotry 
+  #       run: pwd
+  #     - name: List files
+  #       run: ls -al
