--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: ls -al
-    
+      - uses: actions/checkout@v3
+      
   # echo:
   #   runs-on: ubuntu-latest
   #   steps:
