--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -7,7 +7,7 @@ jobs:
       - run: ls -al
       - uses: actions/checkout@v3
       - run: ls -al
-      - run: cat .github/worflows/first.yaml
+      - run: cat .github/workflows/first.yaml
       
   # echo:
   #   runs-on: ubuntu-latest
