--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - run: ls -al
       - uses: actions/checkout@v3
+        with:
+          path: our-source
       - run: ls -al
       - run: cat .github/workflows/first.yaml
       
